crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__quantifiers_tests__quantifier_inside_node.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/quantifiers_tests.rs
---
Q = (block
    (statement)*)
---
Root
  Def
    Id "Q"
    Equals "="
    Tree
      ParenOpen "("
      Id "block"
      Quantifier
        Tree
          ParenOpen "("
          Id "statement"
          ParenClose ")"
        Star "*"
      ParenClose ")"
