crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__quantifiers_tests__quantifier_plus.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/quantifiers_tests.rs
---
Q = (statement)+
---
Root
  Def
    Id "Q"
    Equals "="
    Quantifier
      Tree
        ParenOpen "("
        Id "statement"
        ParenClose ")"
      Plus "+"
