crates/plotnik-compiler/src/parser/tests/grammar/snapshots/plotnik_compiler__parser__tests__grammar__quantifiers_tests__quantifier_with_capture.snap
---
source: crates/plotnik-compiler/src/parser/tests/grammar/quantifiers_tests.rs
---
Q = (statement)* @statements
---
Root
  Def
    Id "Q"
    Equals "="
    Capture
      Quantifier
        Tree
          ParenOpen "("
          Id "statement"
          ParenClose ")"
        Star "*"
      CaptureToken "@statements"
